...
    <string name="date_format_days_ago">%d 日前</string>
    <string name="date_format_months_ago">%d ヶ月前</string>
    <string name="date_format_today">今日</string>
    <string name="label_edit_description">メモを編集</string>
    <string name="label_edit_title">タイトルを編集</string>
    <string name="label_force_remove">完全に削除</string>
    <string name="label_remove">削除</string>
    <string name="label_restore">元に戻す</string>
    <string name="no_deleted_items">30 日経過するとゴミ箱から削除されます</string>
    <string name="no_scanned_results">+ ボタンで読み取りを開始します</string>
    <string name="text_confirm_delete">完全に削除すると復元できません。\nよろしいですか？</string>
    <string name="text_entry_description">メモを入力してください</string>
    <string name="text_entry_title">タイトルを入力してください</string>
    <string name="text_not_found">一致する結果はありません</string>
    <string name="text_recent_query">最近の検索</string>
    <string name="text_search_results">読み取り履歴を検索</string>
    <string name="title_remove_mode">まとめて削除</string>
    <string name="title_restore_mode">まとめて復元</string>
    <string name="title_scanned_list">読み取り履歴</string>
    <string name="title_trash_box">最近削除した項目</string>
</resources>
